secondfile/objects/CustomerSite__c.object
<CustomObject>
    <description>Custom object to store customer site information</description>
    <fields>
        <fullName>ACC_ITPA_Call_Status__c</fullName>
        <label>ACC ITPA Call Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AEoCU_Port_Speed__c</fullName>
        <label>AEoCU Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFBR_Max_CIR_Downstream_Speed__c</fullName>
        <label>AFBR Max CIR Downstream Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFBR_Port_Speed__c</fullName>
        <label>AFBR Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_IW_Response__c</fullName>
        <label>AIA IW Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AIA_Response_Status__c</fullName>
        <label>AIA Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Service_Availability_Response__c</fullName>
        <label>AIA Service Availability Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AIA_Service_Request_Time__c</fullName>
        <label>AIA Service  Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>API_IPQ_Site_Formula__c</fullName>
        <formula>IF(API_IPQ_Site__c == true, &apos;API&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API IPQ Site Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IPQ_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API IPQ Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASE_Availability_Flag__c</fullName>
        <label>ASE Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Building_Fiber_Color__c</fullName>
        <label>ASE Building Fiber Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Copper_Availability_Flag__c</fullName>
        <label>ASE Copper Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Fiber_Availability_Flag__c</fullName>
        <label>ASE Fiber Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_ITPA_Processing_Complete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ASE ITPA Processing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASE_ITPA_Request_Time__c</fullName>
        <label>ASE ITPA Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASE_ITPA_Response_Status__c</fullName>
        <label>ASE ITPA Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_ITPA_Response__c</fullName>
        <label>ASE ITPA Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASE_LightSpeed_Availability_Flag__c</fullName>
        <label>ASE LightSpeed Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_MACD_Site_Status__c</fullName>
        <label>ASE MACD Site Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASEoLS_Max_CIR_Downstream_Speed__c</fullName>
        <label>ASEoLS Max CIR Downstream Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATT_Site_ID__c</fullName>
        <externalId>true</externalId>
        <label>ATT Site ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVPN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Vendor_LEC__c</fullName>
        <label>Access Vendor LEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accouint_Name__c</fullName>
        <formula>Account_End_Customer_Junction__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_Customer_Junction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account End Customer - Junction</label>
        <referenceTo>Account_End_Customer_Junction__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Sites</relationshipLabel>
        <relationshipName>AT_T_Customer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Street</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line__c</fullName>
        <label>Street</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Match__c</fullName>
        <label>Address Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ASE_NOD_status__c</fullName>
        <label>Alternate Access ASE NOD status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_Building_CLLI__c</fullName>
        <label>Alternate Access Building CLLI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_Building_Fiber_code__c</fullName>
        <label>Alternate Access Building Fiber code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_Building_Fiber_color__c</fullName>
        <label>Alternate Access Building Fiber color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Conversation_Id__c</fullName>
        <label>Alternate Access ITPA Conversation Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Failure_Code__c</fullName>
        <label>Alternate Access ITPA Failure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Process_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Access ITPA Process Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Request_Time__c</fullName>
        <label>Alternate Access ITPA Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Response_Status__c</fullName>
        <label>Alternate Access ITPA Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Response__c</fullName>
        <label>Alternate Access ITPA Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_MIS_NOD_status__c</fullName>
        <label>Alternate Access MIS NOD status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_Port_Speed__c</fullName>
        <label>Alternate Access Port Speed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_code__c</fullName>
        <label>Alternate Access code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_latitude__c</fullName>
        <label>Alternate Access latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_level__c</fullName>
        <label>Alternate Access level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_locator__c</fullName>
        <label>Alternate Access locator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_longitude__c</fullName>
        <label>Alternate Access longitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_meetPointHCoordinate__c</fullName>
        <label>Alternate Access meetPointHCoordinate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_meetPointVCoordinate__c</fullName>
        <label>Alternate Access meetPointVCoordinate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_npaNxx__c</fullName>
        <label>Alternate Access npaNxx</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_score__c</fullName>
        <label>Alternate Access score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_servingWireCenter__c</fullName>
        <label>Alternate Access servingWireCenter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_status__c</fullName>
        <label>Alternate Access status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_territoryIndicator__c</fullName>
        <label>Alternate Access territoryIndicator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_vendorName__c</fullName>
        <label>Alternate Access vendorName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRASSResponse__c</fullName>
        <label>BRASSResponse</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BRASS_Request_Time__c</fullName>
        <label>BRASS Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRASS_Response_Status__c</fullName>
        <label>BRASS Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERED ADDRESS</fullName>
                </value>
                <value>
                    <fullName>ALTERNATE ADDRESS</fullName>
                </value>
                <value>
                    <fullName>NO MATCH</fullName>
                </value>
                <value>
                    <fullName>VALID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Completed1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Completed1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Cili_Value__c</fullName>
        <label>Building Cili Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Cili__c</fullName>
        <label>Building Cili</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIR_Downstream_Speed_Copper_Service__c</fullName>
        <label>CIR Downstream Speed - Copper Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIR_Downstream_Speed_Fiber_Service__c</fullName>
        <label>CIR Downstream Speed - Fiber Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIR_Downstream_Speed_LightspeedService__c</fullName>
        <label>CIR Downstream Speed - LightspeedService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_EMUX_Fiber__c</fullName>
        <label>ASE Building Fiber Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConCatLoctionRoom__c</fullName>
        <formula>TEXT(Location__c) + &apos; &apos; + RoomBuildingFloorInput__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConCatLoctionRoom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Based_Statistical_Area_Code__c</fullName>
        <label>Core Based Statistical Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_All_Speeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display All Speeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <label>Duplicate Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <formula>End_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>End customer is required</inlineHelpText>
        <label>End Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Sites</relationshipLabel>
        <relationshipName>AT_T_Customer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EoCU_Max_CIR_Downstream_Speed__c</fullName>
        <label>EoCU Max CIR Downstream Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethernet_Max_Available_Speed__c</fullName>
        <label>Ethernet Max Available Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethernet_Other_Speeds__c</fullName>
        <label>Ethernet Other Speeds</label>
        <length>13172</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ethernet_Over_Copper_Availablility_Flag__c</fullName>
        <label>Ethernet Over Copper Availablility Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiber_Availability_Flag_Code_Building__c</fullName>
        <label>Fiber Availability Flag - Code&amp;Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiber_Availability_Flag_Tier_Info__c</fullName>
        <label>Fiber Availability Flag - Tier&amp;Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiber_Availability_Flag__c</fullName>
        <label>Fiber Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLID__c</fullName>
        <label>GLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Location_ID__c</fullName>
        <label>Global Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Failed_API_MACD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Access ITPA Failed RequestMACD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Failed_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Access ITPA Failed Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host_Response__c</fullName>
        <label>Host Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hostname__c</fullName>
        <label>Hostname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPFLEX_Availability_Flag__c</fullName>
        <label>IPFLEX Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFlex_Plans_Qualified__c</fullName>
        <label>IPFlex Plans Qualified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan A</fullName>
                </value>
                <value>
                    <fullName>Plan B</fullName>
                </value>
                <value>
                    <fullName>Plan C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPQProposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPQ Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Sites</relationshipLabel>
        <relationshipName>AT_T_Customer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ITPA_Failure_Fault_Code__c</fullName>
        <label>ITPA Failure Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITPA_LEC_Contains__c</fullName>
        <formula>Alternate_Access_vendorName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITPA LEC Contains</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITPA_Processing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITPA Processing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITPA_Request_Time__c</fullName>
        <label>ITPA Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ITPA_Response_Code__c</fullName>
        <label>ITPA Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITPA_Response_Description__c</fullName>
        <label>ITPA Response Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ITPA_Response__c</fullName>
        <label>ITPA Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ITPA_Validated_Address__c</fullName>
        <label>ITPA Validated Address</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <label>Interface Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IpId_Availability_Indicator__c</fullName>
        <label>IpId Availability Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEtherNetAvaiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to identify Ethernet is Available</description>
        <label>Is Ethernet Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRegionUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRegionUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSoftRemove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSoftRemove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStaticRDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsStaticRDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LATA_Number_GIS__c</fullName>
        <label>LATA Number - GIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATA_Number_SAG__c</fullName>
        <label>LATA Number - SAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATA_Number__c</fullName>
        <label>LATA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LecName__c</fullName>
        <description>to save lecName obtained from SWPO</description>
        <label>LecName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Site_Name__c</fullName>
        <description>Returns the number of characters in  Site Name</description>
        <formula>LEN( Site_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Site Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lightspeed_Service_Availability_Flag__c</fullName>
        <label>Lightspeed Service Availability Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Number__c</fullName>
        <label>Location Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Status__c</fullName>
        <label>Match Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>to save mileage obtained from SWPO</description>
        <label>Mileage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Near_Match_Indicator__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Near Match Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Availability_Indicator__c</fullName>
        <label>Number Availability Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Portability_Indicator__c</fullName>
        <label>Number Portability Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_VASA_LEC_Contains__c</fullName>
        <formula>VASA_LEC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original VASA LEC	Contains</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Number Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Site_Formula__c</fullName>
        <formula>IF(API_IPQ_Site__c == false, &apos;Portal&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Site Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Tier__c</fullName>
        <label>Pricing Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Sites</relationshipLabel>
        <relationshipName>AT_T_Customer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_Tier__c</fullName>
        <label>Qualification Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_JSON_Request__c</fullName>
        <label>RDS JSON Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RDS_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RDS Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Center__c</fullName>
        <label>Rate Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_VASA_Response_Status__c</fullName>
        <label>Raw Service Availability Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADDRESS RECORD CREATED</fullName>
                </value>
                <value>
                    <fullName>ADDRESS EXACT MATCH</fullName>
                </value>
                <value>
                    <fullName>ADDRESS NO MATCH</fullName>
                </value>
                <value>
                    <fullName>POSSIBLE MATCHES</fullName>
                </value>
                <value>
                    <fullName>SERVICE AVAILABILITY CHECKED</fullName>
                </value>
                <value>
                    <fullName>SERVICE UNAVAILABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Raw_Vasa__c</fullName>
        <label>Raw Service Availability Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>to save region obtained from SWPO request</description>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomBuildingFloorInput__c</fullName>
        <label>RoomBuildingFloorInput</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWPO_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the site record is from SWPO webservice.</description>
        <label>SWPO Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SWPO_RDS_Information__c</fullName>
        <description>To save RDS details to run batch apex using this filed in SWPO.</description>
        <label>SWPO RDS Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Avail_Key__c</fullName>
        <formula>LOWER(SUBSTITUTE(Address_Line__c, &quot; &quot;, &quot;&quot;)+SUBSTITUTE(City__c, &quot; &quot;, &quot;&quot;)+SUBSTITUTE(TEXT(State__c), &quot; &quot;, &quot;&quot;)+SUBSTITUTE(Zip_Code__c, &quot; &quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Avail Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Availability_Response__c</fullName>
        <label>Service Availability Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Types__c</fullName>
        <label>Service Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiteConfigureFieldUpdateBatchCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SiteConfigureFieldUpdateBatchCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Description__c</fullName>
        <label>Site Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Failed_Counter__c</fullName>
        <defaultValue>(0)</defaultValue>
        <description>This field will act as an counter for re-triggering the failed customer sites. 
Default value will be 0 and max value can be 3. If it exceed 3 then reset the value to 0. 
All the logic will be written in &quot;FlowITPAContinuationController&quot; and &quot;retriggerFailedCustomerSites&quot;.</description>
        <label>Site Failed Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <formula>Id</formula>
        <label>Site Token Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Number__c</fullName>
        <description>site Number Which starts with &apos;Site&apos;  for SWPO</description>
        <label>Site Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Quote_Expiration_Date__c</fullName>
        <label>Site Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Speed_Name__c</fullName>
        <label>Speed Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Physical_Value__c</fullName>
        <label>Speed Physical Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Unit__c</fullName>
        <label>Speed Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speeds_Not_Available_ITPA__c</fullName>
        <label>Speeds Not Available (ITPA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>